# budgie-desktop

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  Taskfile.yml  meson.build  meson_options.txt
data/: budgie-daemon.1  budgie-desktop-settings.1  budgie-desktop.1  budgie-panel.1  budgie-polkit-dialog.1  budgie-portals.conf  budgie-run-dialog.1  budgie-screenshot.1  budgie-version.xml.in  budgie-wm.1  meson.build  org.buddiesofbudgie.BudgieScreenshot.1
data/backgrounds/: meson.build
data/icons/: README  meson.build
data/man/: budgie-panel.1
docs/man/: budgie-brightness-helper.1  budgie-daemon.1  budgie-desktop-settings.1  budgie-desktop.1  budgie-panel.1  budgie-run-dialog.1  budgie-wm.1  meson.build  org.buddiesofbudgie.BudgieScreenshot.1  org.buddiesofbudgie.sendto.1  startbudgielabwc.1
po/: LINGUAS  README.md  af.po  ar.po  be.po  be_Latn.po  bg.po  bg_BG.po  bn.po  br.po  bs.po  budgie-desktop.pot  ca.po  cs.po  da.po  de.po  de_CH.mo  de_CH.po  el_GR.po  en_AU.po  en_GB.po  en_US.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  es_MX.po  es_PE.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_BE.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  (+47 more)
src/: meson.build
src/abomination/: AppGroup.vala  RunningApp.vala  abomination.vala  meson.build  utils.vala
src/appindexer/: AppIndex.vala  Application.vala  Category.vala  RelevancyService.vala  Switcheroo.vala  meson.build
src/appindexer/fuzzer/: fuzzer-1.0.vapi  fuzzer.c  fuzzer.h  meson.build
src/applets/budgie-menu/: BudgieMenu.plugin.in  BudgieMenu.vala  BudgieMenuButtons.vala  BudgieMenuWindow.vala  DBusInterfaces.vala  IconChooser.vala  MenuItem.vala  OverlayMenus.vala  PowerMenu.vala  UserButton.vala  com.solus-project.budgie-menu.gschema.xml  meson.build  settings.ui
src/applets/caffeine/: CaffeineApplet.plugin.in  CaffeineSettings.vala
src/applets/clock/: ClockApplet.plugin.in  ClockApplet.vala  meson.build
src/applets/icon-tasklist/: ButtonWrapper.vala  DesktopHelper.vala  Icon.vala  IconButton.vala  IconPopover.vala  IconTasklistApplet.plugin.in  IconTasklistApplet.vala  meson.build
src/applets/keyboard-layout/: KeyboardLayoutApplet.plugin.in  meson.build
src/applets/lock-keys/: LockKeysApplet.plugin.in
src/applets/night-light/: IndicatorWindow.vala  NightLight.plugin.in  meson.build
src/applets/notifications/: NotificationsApplet.plugin.in  NotificationsApplet.vala
src/applets/places-indicator/: MessageRevealer.vala  MountHelper.vala  MountItem.vala  PlacesIndicator.plugin.in  PlacesIndicator.vala  PlacesIndicatorWindow.vala  VolumeItem.vala  meson.build
src/applets/raven-trigger/: RavenTriggerApplet.plugin.in  RavenTriggerApplet.vala  meson.build
src/applets/separator/: SeparatorApplet.plugin.in
src/applets/show-desktop/: ShowDesktopApplet.plugin.in  meson.build
src/applets/simple-tasklist/: Button.vala  SimpleTasklistApplet.plugin.in  SimpleTasklistApplet.vala  meson.build
src/appsys/: AppSystem.vala  meson.build
src/bridges/: meson.build
src/config/: budgie-config.c  budgie-config.h  budgie-config.vapi
src/daemon/: aftershot.ui  background.vala  brightness-helper.vala  brightness-manager.vala  brightness-util.vala  budgie-daemon.desktop.in  budgie-daemon.gresource.xml  crystal_dock_helper.vala  endsession.ui  endsession.vala  gammastep.config  ibus.vala  keyboard.vala  main.vala  manager.vala  menus.vala  meson.build  mpris-controller.vala  nightlight.vala  notifications.vala  org.buddiesofbudgie.Screenshot.desktop.in  org.buddiesofbudgie.budgie-desktop.screenshot.gschema.xml  org.buddiesofbudgie.screenshot.desktop.in  org.buddiesofbudgie.screenshot.gschema.xml  osd.vala  osdkeys.vala  screenlock.vala  screenshot.vala  screenshot_main.vala  screenshot_uploader.vala  screenshotclient.vala  screenshothome.ui  settings.vala  statusnotifier.vala  tabswitcher.vala  wlr-display-manager.c  wlr-output-management-unstable-v1.xml
src/dialogs/: meson.build
src/lib/: animation.vala  application.vala  manager.vala  meson.build  mpris.vala  notification.vala  shadow.vala  switcheroo.vala  toplevel.vala  waylandclient.vala
src/libsession/: libsession.vala  meson.build
src/panel/: ConstrainedBox.vala  budgie-desktop-settings.desktop.in  budgie-desktop-settings.vala  budgie-panel.desktop.in  com.solus-project.budgie-panel.gschema.xml  main.vala  manager.vala  meson.build  panel.ini  panel.vala  plugin_manager.vala  uuid.vala
src/plugin/: applet-info.c  applet.c  meson.build  popover-manager.c  popover-manager.h  popover.c  popover.h  util.h
src/polkit/: meson.build  polkitdialog.vala
src/powerdialog/: dbus.vala  dialog_button.vala  main.vala  window.vala
src/raven/: app_sound_control.vala  calendar.vala  com.solus-project.budgie.raven.gschema.xml  headerwidget.vala  main_view.vala  meson.build  notification_clone.vala  notification_widget.vala  notifications_group.vala  notifications_view.vala  org.buddiesofbudgie.budgie-desktop.raven.gschema.xml  plugin_manager.vala  powerstrip.vala  raven.vala  sound-input.vala  sound-output.vala  sound.vala  sound_input.vala  sound_output.vala  start_listening.vala  widget.vala  widgets.ini
src/rundialog/: LauncherButton.vala  RunDialog.vala  meson.build
src/session/: budgie-desktop-daemonv2.desktop.in.in  budgie-desktop-labwc.desktop.in.in  budgie-desktop-magpie.desktop.in.in  budgie-desktop-nm-applet.desktop.in  budgie-desktop-powerdialog.desktop.in  budgie-desktop-powerdialog.desktop.in.in  budgie-desktop-screenshotdialog.desktop.in.in  budgie-desktop.desktop.in.in  budgie-desktop.in  meson.build  org.buddiesofbudgie.settings-daemon.plugins.media-keys.gschema.xml  startbudgiedesktop.in  startbudgielabwc.in
src/theme/: meson.build  theme-manager.c  theme-manager.h  theme.c  theme.h
src/windowing/: dbus.vala  meson.build  window_group.vala  window_mapper.vala  windowing.vala
src/wm/: 20_solus-project.budgie.wm.gschema.override  background.vala  com.solus-project.budgie.wm.gschema.xml  ibus.vala  keyboard.vala  main.vala  meson.build  screenshot.vala  shim.vala  wm.vala
(+600 files in other folders)
