project(
    'budgie-desktop',
    version: '10.5',
    license: 'GPL-2.0-only',
)

i18n = import('i18n')

# for i in *.po; do echo "    '$i'," | sed 's/\.po//'; done
langs = [
    'af',
    'ar',
    'be_Latn',
    'be',
    'bg_BG',
    'bn',
    'bs',
    'ca',
    'cs',
    'da',
    'de_CH',
    'de',
    'el_GR',
    'en_GB',
    'en_US',
    'eo',
    'es_AR',
    'es_CL',
    'es_MX',
    'es_PE',
    'es',
    'es_US',
    'eu',
    'fi',
    'fr_BE',
    'fr',
    'ga',
    'gl',
    'he',
    'hi',
    'hr',
    'hu',
    'id',
    'it',
    'ja_JP',
    'ka',
    'ko',
    'lt',
    'lv',
    'ms_MY',
    'ne',
    'nl_BE',
    'nl',
    'nn',
    'no',
    'oc',
    'pa',
    'pl',
    'pt_BR',
    'pt_PT',
    'ro',
    'ru',
    'sk',
    'sl',
    'sq',
    'sr_RS@latin',
    'sr_RS',
    'sv',
    'tr',
    'tt',
    'uk',
    'ur_PK',
    'ur',
    'vi_VN',
    'zh_HK',
    'zh',
    'zh_TW',
]

# Stole this from gnome-twitch, ty TingPing
# https://github.com/vinszent/gnome-twitch/tree/master/po
i18n.gettext(meson.project_name(), languages : langs, args : [
    '--from-code=UTF-8',
    '--add-comments',
    '--package-name=' + meson.project_name(),
    '--package-version=' + meson.project_version(),
    '--keyword=_',
    '--keyword=N_',
    '--keyword=C_:1c,2',
    '--keyword=NC_:1c,2',
    '--keyword=g_dcgettext:2',
    '--keyword=g_dngettext:2,3',
    '--keyword=g_dpgettext2:2c,3',

    '--flag=N_:1:pass-c-format',
    '--flag=C_:2:pass-c-format',
    '--flag=NC_:2:pass-c-format',
    '--flag=g_dngettext:2:pass-c-format',
    '--flag=g_strdup_printf:1:c-format',
    '--flag=g_string_printf:2:c-format',
    '--flag=g_string_append_printf:2:c-format',
    '--flag=g_error_new:3:c-format',
    '--flag=g_set_error:4:c-format',
])
