# Control the order and relation between the subcomponents in Budgie

# Library components
subdir('plugin')
subdir('config')
subdir('libsession')

# Needed for daemon + applets
subdir('appsys')
subdir('abomination')

subdir('theme')
subdir('lib')
subdir('raven')
subdir('windowing')
subdir('appindexer')

# Executable components
subdir('daemon')

subdir('dialogs')

subdir('wm')
subdir('panel')

# Finish up by doing the session
subdir('session')
