# Control the order and relation between the subcomponents in Budgie

# Library components
subdir('config')
subdir('plugin')
subdir('libsession')

# Needed for daemon + applets
subdir('appsys')

subdir('theme')
subdir('lib')
subdir('raven')
subdir('windowing')
subdir('appindexer')

# Executable components
subdir('daemon')

subdir('dialogs')

subdir('wm')
subdir('panel')

subdir('bridges')

# Finish up by doing the session
subdir('session')
