actions_icons = [
    join_paths('.', 'actions', 'budgie-menu-symbolic.svg'),
    join_paths('.', 'actions', 'notification-alert-symbolic.svg'),
    join_paths('.', 'actions', 'notification-disabled-symbolic.svg'),
    join_paths('.', 'actions', 'pane-hide-symbolic.svg'),
    join_paths('.', 'actions', 'pane-show-symbolic.svg'),
    join_paths('.', 'actions', 'system-log-out-symbolic.svg'),
    join_paths('.', 'actions', 'system-reboot-symbolic.svg'),
    join_paths('.', 'actions', 'system-suspend-symbolic.svg'),
    join_paths('.', 'actions', 'system-hibernate-symbolic.svg'),
]

app_icons = [
    join_paths('.', 'apps', 'budgie-desktop-symbolic.svg'),
    join_paths('.', 'apps', 'system-tray-symbolic.svg'),
    join_paths('.', 'apps', 'icon-task-list-symbolic.svg'),
    join_paths('.', 'apps', 'spacer-symbolic.svg'),
    join_paths('.', 'apps', 'clock-applet-symbolic.svg'),
    join_paths('.', 'apps', 'workspace-switcher-symbolic.svg'),
    join_paths('.', 'apps', 'notifications-applet-symbolic.svg'),
    join_paths('.', 'apps', 'separator-symbolic.svg'),
    join_paths('.', 'apps', 'task-list-symbolic.svg'),
    join_paths('.', 'apps', 'my-caffeine-on-symbolic.svg'),
]

status_icons = [
    join_paths('.', 'status', 'num-lock-symbolic.svg'),
    join_paths('.', 'status', 'caps-lock-symbolic.svg'),
    join_paths('.', 'status', 'budgie-caffeine-cup-full.svg'),
    join_paths('.', 'status', 'budgie-caffeine-cup-empty.svg'),
]

install_data(
    actions_icons,
    install_dir: join_paths(datadir, 'icons', 'hicolor', 'scalable', 'actions'),
)

install_data(
    app_icons,
    install_dir: join_paths(datadir, 'icons', 'hicolor', 'scalable', 'apps'),
)

install_data(
    status_icons,
    install_dir: join_paths(datadir, 'icons', 'hicolor', 'scalable', 'status'),
)
