man_pages = [
    'budgie-daemon.1',
    'budgie-desktop-settings.1',
    'budgie-desktop.1',
    'budgie-panel.1',
    'budgie-run-dialog.1',
    'budgie-wm.1',
    'org.buddiesofbudgie.BudgieScreenshot.1',
    'org.buddiesofbudgie.sendto.1'
]

foreach man_page : man_pages
    install_man(man_page)
endforeach
